fixed alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,10 @@ p {
         position: static;
     }
 
+    .frame {
+        margin-bottom: 7%;
+    }
+
     .dev-image {
         margin: 10% 0% 0% 0%;
         width: 60%;
